--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -148,12 +148,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34c91676",
+   "id": "690f9303",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Deploy the Ray Cluster CR:\n",
-    "kubectl apply -f kuberay/ray-operator/samples/ray-cluster.autoscaler.yaml\n",
+    "! kubectl apply -f kuberay/ray-operator/samples/ray-cluster.autoscaler.yaml\n",
     "# This Ray cluster is named `raycluster-autoscaler` because it has the optional Ray Autoscaler support enabled."
    ]
   },
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cfafe1c",
+   "id": "a0266f29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a559a589",
+   "id": "2da3c43c",
    "metadata": {},
    "source": [
     "The KubeRay operator will now detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
@@ -374,9 +374,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "# Execute this in a separate shell.\n",
-    "kubectl port-forward service/raycluster-autoscaler-head-svc 8265:8265"
+    "! kubectl port-forward service/raycluster-autoscaler-head-svc 8265:8265"
    ]
   },
   {
@@ -395,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "472c589c",
+   "id": "f5635d9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,9 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
     "# Execute this in a separate shell.\n",
-    "kubectl port-forward service/raycluster-autoscaler-head-svc 10001:10001"
+    "! kubectl port-forward service/raycluster-autoscaler-head-svc 10001:10001"
    ]
   },
   {
@@ -447,7 +445,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7ab6f0a",
+   "id": "a3a5bb69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45da2872",
+   "id": "086fbb5d",
    "metadata": {},
    "outputs": [],
    "source": [
