--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -85,13 +85,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
-    "\n",
     "# After the KubeRay 0.3.0 release branch cut, this documentation will be updated to refer to 0.3.0 branch.\n",
-    "git clone https://github.com/ray-project/kuberay\n",
+    "! git clone https://github.com/ray-project/kuberay\n",
     "\n",
     "# This creates the KubeRay operator and all of the resources it needs.\n",
-    "kubectl create -k ray-operator/config/default\n",
+    "! kubectl create -k ray-operator/config/default\n",
     "\n",
     "# Note that we must use \"kubectl create\" in the above command. \"kubectl apply\" will not work due to https://github.com/ray-project/kuberay/issues/271"
    ]
@@ -148,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "690f9303",
+   "id": "23b5627f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0266f29",
+   "id": "12a57f3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da3c43c",
+   "id": "11c2ce0a",
    "metadata": {},
    "source": [
     "The KubeRay operator will now detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
@@ -394,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5635d9c",
+   "id": "64d0efed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a5bb69",
+   "id": "e49e2866",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "086fbb5d",
+   "id": "8fc6a250",
    "metadata": {},
    "outputs": [],
    "source": [
