--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "In this guide, we discuss how to manage and interact with Ray clusters on Kubernetes.\n",
     "\n",
-    "You can download this guide as an executable Jupyter notebook by clicking the download button on the top right of this page.\n",
+    "You can download this guide as an executable Jupyter notebook by clicking the download button on the top right of the page.\n",
     "\n",
     "\n",
     "## Preparation\n",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b5627f",
+   "id": "30e9d050",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12a57f3c",
+   "id": "6713f1b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11c2ce0a",
+   "id": "ec8acc7c",
    "metadata": {},
    "source": [
     "The KubeRay operator will now detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64d0efed",
+   "id": "00bad452",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e49e2866",
+   "id": "70867be0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fc6a250",
+   "id": "1a9747d5",
    "metadata": {},
    "outputs": [],
    "source": [
