--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -85,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# After the KubeRay 0.3.0 release branch cut, this documentation will be updated to refer to 0.3.0 branch.\n",
+    "# After the KubeRay 0.3.0 release branch cut, this documentation will be updated to refer to the 0.3.0 branch.\n",
     "! git clone https://github.com/ray-project/kuberay\n",
     "\n",
     "# This creates the KubeRay operator and all of the resources it needs.\n",
@@ -140,19 +140,20 @@
    "source": [
     "Once the KubeRay operator is running, we are ready to deploy a Ray cluster. To do so, we create a RayCluster Custom Resource (CR).\n",
     "\n",
-    "(In the rest of this guide, we will deploy resources into the default namespace. To use a non-default namespace, specify the namespace in your kubectl commands: `kubectl -n <your-namespace> ...`.)"
+    "In the rest of this guide, we will deploy resources into the default namespace. To use a non-default namespace, specify the namespace in your kubectl commands:\n",
+    "`kubectl -n <your-namespace> ...`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30e9d050",
+   "id": "a540c68a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Deploy the Ray Cluster CR:\n",
     "! kubectl apply -f kuberay/ray-operator/samples/ray-cluster.autoscaler.yaml\n",
-    "# This Ray cluster is named `raycluster-autoscaler` because it has the optional Ray Autoscaler support enabled."
+    "# This Ray cluster is named `raycluster-autoscaler` because it has optional Ray Autoscaler support enabled."
    ]
   },
   {
@@ -166,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6713f1b6",
+   "id": "1a789337",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,10 +178,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec8acc7c",
+   "id": "e6dbeb33",
    "metadata": {},
    "source": [
-    "The KubeRay operator will now detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
+    "The KubeRay operator will detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
    ]
   },
   {
@@ -202,7 +203,7 @@
    "id": "28bd44a8",
    "metadata": {},
    "source": [
-    "We see a Ray head with two (2/2) containers -- the Ray container and autoscaler sidecar. We also have a Ray worker with its single Ray container."
+    "We see a Ray head pod with two containers -- the Ray container and autoscaler sidecar. We also have a Ray worker with its single Ray container."
    ]
   },
   {
@@ -227,8 +228,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! kubectl get pods --selector=ray.io/cluster=raycluster-autoscaler --selector=ray.io/node-type=head\\\n",
+    "! kubectl get pods --selector=ray.io/cluster=raycluster-autoscaler\\\n",
+    " --selector=ray.io/node-type=head\\\n",
     " -o custom-columns=POD:metadata.name --no-headers\n",
+    "    \n",
     "# raycluster-autoscaler-head-xxxxx"
    ]
   },
@@ -239,7 +242,7 @@
    "source": [
     "Now, we can run a Ray program on the Ray head pod. The Ray program in the next cell asks the autoscaler to scale the cluster to a total of 3 CPUs. The head and worker in our example cluster each have a capacity of 1 CPU, so the request should trigger upscaling of an additional worker pod.\n",
     "\n",
-    "(Note that in real-life scenarios, we will typically want to use much larger Ray pods. In fact, it is advantageous to size each Ray pod to take up an entire Kubernetes node. See the {ref}`configuration guide<kuberay-config>` for more details.)"
+    "(Note that in real-life scenarios, you will want to use larger Ray pods. In fact, it is advantageous to size each Ray pod to take up an entire Kubernetes node. See the {ref}`configuration guide<kuberay-config>` for more details.)"
    ]
   },
   {
@@ -250,7 +253,8 @@
    "outputs": [],
    "source": [
     "# Substitute your output from the last cell in place of \"raycluster-autoscaler-head-xxxxx\"\n",
-    "! kubectl exec raycluster-autoscaler-head-wpcth -it -c ray-head -- python -c\\\n",
+    "! kubectl exec raycluster-autoscaler-head-wpcth -it -c ray-head --\\\n",
+    " python -c\\\n",
     " \"import ray; ray.init(); ray.autoscaler.sdk.request_resources(num_cpus=3)\""
    ]
   },
@@ -392,13 +396,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00bad452",
+   "id": "b17b2994",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Install Ray locally to use the Ray Job CLI\n",
     "# The following job's logs will show the Ray cluster's total resource capacity, including 3 CPUs.\n",
-    "! ray job submit --address http://localhost:8265 -- python -c \"import ray; ray.init(); print(ray.cluster_resources())\""
+    "! ray job submit --address http://localhost:8265 --\\\n",
+    " python -c \"import ray; ray.init(); print(ray.cluster_resources())\""
    ]
   },
   {
@@ -443,7 +448,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70867be0",
+   "id": "f25cb1e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +573,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a9747d5",
+   "id": "55927233",
    "metadata": {},
    "outputs": [],
    "source": [
