--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06e23277",
+   "id": "5105598f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03d4f61f",
+   "id": "f73e557c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "810c1df3",
+   "id": "ac816906",
    "metadata": {},
    "source": [
     "The KubeRay operator will detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
@@ -223,7 +223,7 @@
     "### Accessing the cluster with kubectl exec\n",
     "\n",
     "The most straightforward way to experiment with your Ray cluster is to\n",
-    "exec directly into the head pod. First, identify your cluster's head pod:"
+    "exec directly into the head pod. First, identify your Ray cluster's head pod:"
    ]
   },
   {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5e00c4d",
+   "id": "1d3e0261",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdc063a9",
+   "id": "3d366fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8890e36c",
+   "id": "308c59cf",
    "metadata": {},
    "outputs": [],
    "source": [
