--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f6b19c5",
+   "id": "163d5b9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23d29d0b",
+   "id": "7275b6d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,10 +182,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fda38b85",
+   "id": "87a387e5",
    "metadata": {},
    "source": [
-    "The KubeRay operator will detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view the pods in the Ray cluster, run the following commands:"
+    "The KubeRay operator will detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view Ray cluster's pods, run the following command:"
    ]
   },
   {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d11cec2",
+   "id": "7e9e6e5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1a74c06",
+   "id": "c6c11f15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8df2031f",
+   "id": "dc7b6268",
    "metadata": {},
    "outputs": [],
    "source": [
