--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b024b878",
+   "id": "8e0a9989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c90884db",
+   "id": "5e475712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d2f3eb3",
+   "id": "80ef4aa4",
    "metadata": {},
    "source": [
     "The KubeRay operator will detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view Ray cluster's pods, run the following command:"
@@ -245,7 +245,7 @@
    "id": "190b2163",
    "metadata": {},
    "source": [
-    "Now, we can run a Ray program on the Ray head pod. The Ray program in the next cell asks the autoscaler to scale the cluster to a total of 3 CPUs. The head and worker in our example cluster each have a capacity of 1 CPU, so the request should trigger upscaling of an additional worker pod.\n",
+    "Now, we can run a Ray program on the head pod. The Ray program in the next cell asks the autoscaler to scale the cluster to a total of 3 CPUs. The head and worker in our example cluster each have a capacity of 1 CPU, so the request should trigger upscaling of an additional worker pod.\n",
     "\n",
     "(Note that in real-life scenarios, you will want to use larger Ray pods. In fact, it is advantageous to size each Ray pod to take up an entire Kubernetes node. See the {ref}`configuration guide<kuberay-config>` for more details.)"
    ]
@@ -259,7 +259,7 @@
    "source": [
     "# Substitute your output from the last cell in place of \"raycluster-autoscaler-head-xxxxx\"\n",
     "\n",
-    "! kubectl exec raycluster-autoscaler-head-wpcth -it -c ray-head --\\\n",
+    "! kubectl exec raycluster-autoscaler-head-xxxxx -it -c ray-head --\\\n",
     " python -c\\\n",
     " \"import ray; ray.init(); ray.autoscaler.sdk.request_resources(num_cpus=3)\""
    ]
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "695735c0",
+   "id": "134c0810",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1a049c1",
+   "id": "e3e6ad7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e204638",
+   "id": "9ae31be3",
    "metadata": {},
    "outputs": [],
    "source": [
