--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6e24da0",
+   "id": "1aa3616e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66f777fe",
+   "id": "2ef2ce6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5673cb7",
+   "id": "cc2923e5",
    "metadata": {},
    "source": [
     "The KubeRay operator will detect the RayCluster object. The operator will then start your Ray cluster by creating head and worker pods. To view Ray cluster's pods, run the following command:"
@@ -247,7 +247,7 @@
    "source": [
     "Now, we can run a Ray program on the head pod. The Ray program in the next cell asks the autoscaler to scale the cluster to a total of 3 CPUs. The head and worker in our example cluster each have a capacity of 1 CPU, so the request should trigger upscaling of an additional worker pod.\n",
     "\n",
-    "(Note that in real-life scenarios, you will want to use larger Ray pods. In fact, it is advantageous to size each Ray pod to take up an entire Kubernetes node. See the {ref}`configuration guide<kuberay-config>` for more details.)"
+    "Note that in real-life scenarios, you will want to use larger Ray pods. In fact, it is advantageous to size each Ray pod to take up an entire Kubernetes node. See the {ref}`configuration guide<kuberay-config>` for more details."
    ]
   },
   {
@@ -398,6 +398,7 @@
     "Note: We use port-forwarding in this guide as a simple way to experiment with a Ray cluster's services. For production use-cases, you would typically either \n",
     "- Access the service from within the Kubernetes cluster or\n",
     "- Use an ingress controller to expose the service outside the cluster.\n",
+    "\n",
     "See the {ref}`networking notes <kuberay-networking>` for details.\n",
     "\n",
     "Now that we have access to the Dashboard port, we can submit jobs to the Ray Cluster:"
@@ -406,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "157d5527",
+   "id": "471f7a59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d442b5dc",
+   "id": "1bb0fb23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa6d6894",
+   "id": "3f3b0d1a",
    "metadata": {},
    "outputs": [],
    "source": [
