--- a/doc/source/tune/examples/flaml_example.ipynb
+++ b/doc/source/tune/examples/flaml_example.ipynb
@@ -1241,7 +1241,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "You passed a `space` parameter to OptunaSearch that contained unresolved search space definitions. OptunaSearch should however be instantiated with fully configured search spaces only. To use Ray Tune's automatic search space conversion, pass the space definition as part of the `config` argument to `tune.run()` instead.\n",
+      "You passed a `space` parameter to OptunaSearch that contained unresolved search space definitions. OptunaSearch should however be instantiated with fully configured search spaces only. To use Ray Tune's automatic search space conversion, pass the space definition as part of the `param_space` argument to `Tuner()` instead.\n",
       "\u001b[32m[I 2022-07-22 15:18:55,531]\u001b[0m A new study created in memory with name: optuna\u001b[0m\n"
      ]
     }
