--- a/doc/source/tune/examples/mxnet_example.ipynb
+++ b/doc/source/tune/examples/mxnet_example.ipynb
@@ -130,9 +130,9 @@
     "        ray.init(f\"ray://{args.server_address}\")\n",
     "\n",
     "    if args.smoke_test:\n",
-    "        analysis = tune_mnist_mxnet(num_samples=1, num_epochs=1)\n",
+    "        results = tune_mnist_mxnet(num_samples=1, num_epochs=1)\n",
     "    else:\n",
-    "        analysis = tune_mnist_mxnet(num_samples=10, num_epochs=10)\n",
+    "        results = tune_mnist_mxnet(num_samples=10, num_epochs=10)\n",
     "\n",
     "    print(\"Best hyperparameters found were: \", results.get_best_result().config)\n"
    ]
