revert changes to nyc taxi

--- a/doc/source/data/examples/nyc_taxi_basic_processing.ipynb
+++ b/doc/source/data/examples/nyc_taxi_basic_processing.ipynb
@@ -110,8 +110,8 @@
    "source": [
     "# Read two Parquet files in parallel.\n",
     "ds = ray.data.read_parquet([\n",
-    "    \"s3://anonymous@ursa-labs-taxi-data/2009/01/data.parquet\",\n",
-    "    \"s3://anonymous@ursa-labs-taxi-data/2009/02/data.parquet\",\n",
+    "    \"s3://ursa-labs-taxi-data/2009/01/data.parquet\",\n",
+    "    \"s3://ursa-labs-taxi-data/2009/02/data.parquet\",\n",
     "])"
    ]
   },
@@ -360,7 +360,7 @@
    "outputs": [],
    "source": [
     "# Read all Parquet data for the year 2009.\n",
-    "year_ds = ray.data.read_parquet(\"s3://anonymous@ursa-labs-taxi-data/2009\")"
+    "year_ds = ray.data.read_parquet(\"s3://ursa-labs-taxi-data/2009\")"
    ]
   },
   {
@@ -696,8 +696,8 @@
     "\n",
     "pushdown_ds = ray.data.read_parquet(\n",
     "    [\n",
-    "        \"s3://anonymous@ursa-labs-taxi-data/2009/01/data.parquet\",\n",
-    "        \"s3://anonymous@ursa-labs-taxi-data/2009/02/data.parquet\",\n",
+    "        \"s3://ursa-labs-taxi-data/2009/01/data.parquet\",\n",
+    "        \"s3://ursa-labs-taxi-data/2009/02/data.parquet\",\n",
     "    ],\n",
     "    columns=[\"passenger_count\", \"trip_distance\"],\n",
     "    filter=filter_expr,\n",
@@ -1057,7 +1057,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r\n",
+      "\r",
       "Map Progress (8 actors 2 pending):  50%|█████     | 1/2 [01:31<01:31, 91.10s/it]"
      ]
     },
