--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -6,17 +6,17 @@
    "metadata": {},
    "source": [
     "(kuberay-quickstart)=\n",
-    "\n",
     "# Getting Started\n",
     "\n",
-    "In this guide, we discuss how to manage and interact with Ray clusters on Kubernetes.\n",
+    "In this guide, we show you how to manage and interact with Ray clusters on Kubernetes.\n",
     "\n",
     "You can download this guide as an executable Jupyter notebook by clicking the download button on the top right of the page.\n",
     "\n",
     "\n",
     "## Preparation\n",
     "\n",
-    "### Install the latest Ray release"
+    "### Install the latest Ray release\n",
+    "This step is needed to interact with remote Ray clusters using Ray Job Submission :ref:`Ray Job Submission <kuberay-job>` and :ref:`Ray Client <kuberay-client>` Ray Client."
    ]
   },
   {
@@ -89,7 +89,7 @@
     "! git clone https://github.com/ray-project/kuberay\n",
     "\n",
     "# This creates the KubeRay operator and all of the resources it needs.\n",
-    "! kubectl create -k ray-operator/config/default\n",
+    "! kubectl create -k kuberay/ray-operator/config/default\n",
     "\n",
     "# Note that we must use \"kubectl create\" in the above command. \"kubectl apply\" will not work due to https://github.com/ray-project/kuberay/issues/271"
    ]
@@ -366,6 +366,7 @@
    "id": "e29c48ba",
    "metadata": {},
    "source": [
+    "(kuberay-job)=\n",
     "### Ray Job submission"
    ]
   },
@@ -428,6 +429,7 @@
     "\n",
     "The dashboard port will not be used in the rest of this guide. You may stop the port-forwarding process if you wish.\n",
     "\n",
+    "(kuberay-client)=\n",
     "### Accessing the cluster using Ray Client\n",
     "\n",
     "[Ray Client](https://docs.ray.io/en/latest/cluster/ray-client.html) allows you to interact programatically with a remote Ray cluster using the core Ray APIs.\n",
