--- a/doc/source/data/examples/nyc_taxi_basic_processing.ipynb
+++ b/doc/source/data/examples/nyc_taxi_basic_processing.ipynb
@@ -116,7 +116,7 @@
    "source": [
     "# Import ray and initialize a local Ray cluster.\n",
     "import ray\n",
-    "ray.init(address=\"auto\", ignore_reinit_error=True)"
+    "ray.init()"
    ]
   },
   {
@@ -1177,7 +1177,7 @@
  "metadata": {
   "celltoolbar": "Tags",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.10 ('ray3.7')",
    "language": "python",
    "name": "python3"
   },
@@ -1191,7 +1191,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "99d89bfe98f3aa2d7facda0d08d31ff2a0af9559e5330d719288ce64a1966273"
+   }
   }
  },
  "nbformat": 4,
