--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install -U ray[default]"
+    "pip install -U \"ray[default]\""
    ]
   },
   {
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "# Deploy the Ray Cluster CR:\n",
-    "! kubectl apply -f kuberay/ray-operator/samples/ray-cluster.autoscaler.yaml\n",
+    "! kubectl apply -f kuberay/ray-operator/config/samples/ray-cluster.autoscaler.yaml\n",
     "\n",
     "# This Ray cluster is named `raycluster-autoscaler` because it has optional Ray Autoscaler support enabled."
    ]
@@ -205,10 +205,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28bd44a8",
+   "id": "2fd3f55d",
    "metadata": {},
    "source": [
-    "We see a Ray head pod with two containers -- the Ray container and autoscaler sidecar. We also have a Ray worker with its single Ray container."
+    "We see a Ray head pod with two containers -- the Ray container and autoscaler sidecar. We also have a Ray worker with its single Ray container.\n",
+    "\n",
+    "Wait for the pods to reach Running state. This may take a few minutes for the pods to reach Running state -- most of this time is spent downloading the Ray images. In a separate shell, you may wish to observe the pods' status in real-time with the following command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef33bce8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you're on MacOS, first `brew install watch`.\n",
+    "# Run in a separate shell:\n",
+    "! watch -n 1 kubectl get pod"
    ]
   },
   {
@@ -304,6 +318,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Substitute your head pod's name in place of \"raycluster-autoscaler-head-xxxxx\"\n",
     "! kubectl exec raycluster-autoscaler-head-xxxxx -it -c ray-head -- ray status\n",
     "\n",
     "# ======== Autoscaler status: 2022-07-21 xxxxxxxxxx ========\n",
@@ -320,12 +335,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4ec93304",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error from server (NotFound): pods \"raycluster-autoscaler-head-xxxxx\" not found\r\n"
+     ]
+    }
+   ],
    "source": [
     "# This command gets the last 20 lines of autoscaler logs.\n",
+    "\n",
+    "# Substitute your head pod's name in place of \"raycluster-autoscaler-head-xxxxx\"\n",
     "! kubectl logs raycluster-autoscaler-head-xxxxx -c autoscaler | tail -n 20\n",
     "\n",
     "# ======== Autoscaler status: 2022-07-21 xxxxxxxxxx ========\n",
@@ -468,9 +493,6 @@
     "import ray\n",
     "import platform\n",
     "\n",
-    "# Disconnect from Ray if already connected.\n",
-    "ray.shutdown()\n",
-    "\n",
     "ray.init(\"ray://localhost:10001\")\n",
     "\n",
     "# The network name of the local machine.\n",
@@ -487,7 +509,10 @@
     "remote_host_name = ray.get(get_host_name.remote())\n",
     "\n",
     "print(\"The local host name is {}\".format(local_host_name))\n",
-    "print(\"The Ray head pod's name is {}\".format(remote_host_name))"
+    "print(\"The Ray head pod's name is {}\".format(remote_host_name))\n",
+    "\n",
+    "# Disconnect from Ray.\n",
+    "ray.shutdown()"
    ]
   },
   {
@@ -529,7 +554,7 @@
    "outputs": [],
    "source": [
     "# Delete by reference to the yaml file we used to define the RayCluster CR \n",
-    "! kubectl delete -f kuberay/ray-operator/samples/ray-cluster.autoscaler.yaml"
+    "! kubectl delete -f kuberay/ray-operator/config/samples/ray-cluster.autoscaler.yaml"
    ]
   },
   {
@@ -610,7 +635,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
