--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -205,18 +205,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fd3f55d",
+   "id": "57813a60",
    "metadata": {},
    "source": [
     "We see a Ray head pod with two containers -- the Ray container and autoscaler sidecar. We also have a Ray worker with its single Ray container.\n",
     "\n",
-    "Wait for the pods to reach Running state. This may take a few minutes for the pods to reach Running state -- most of this time is spent downloading the Ray images. In a separate shell, you may wish to observe the pods' status in real-time with the following command:"
+    "Wait for the pods to reach Running state. This may take a few minutes -- most of this time is spent downloading the Ray images. In a separate shell, you may wish to observe the pods' status in real-time with the following command:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef33bce8",
+   "id": "2d2a3e83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,18 +335,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "4ec93304",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error from server (NotFound): pods \"raycluster-autoscaler-head-xxxxx\" not found\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This command gets the last 20 lines of autoscaler logs.\n",
     "\n",
