--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -16,7 +16,7 @@
     "## Preparation\n",
     "\n",
     "### Install the latest Ray release\n",
-    "This step is needed to interact with remote Ray clusters using Ray Job Submission {ref}`Ray Job Submission <kuberay-job>` and {ref}`Ray Client <kuberay-client>` Ray Client."
+    "This step is needed to interact with remote Ray clusters using Ray Job Submission {ref}`Ray Job Submission <kuberay-job>` and {ref}`Ray Client <kuberay-client>`."
    ]
   },
   {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cd31983",
+   "id": "2fb1c582",
    "metadata": {},
    "source": [
     "We see a Ray head pod with two containers -- the Ray container and autoscaler sidecar. We also have a Ray worker with its single Ray container.\n",
@@ -216,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "317202be",
+   "id": "68dab885",
    "metadata": {},
    "outputs": [],
    "source": [
