--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -16,7 +16,7 @@
     "## Preparation\n",
     "\n",
     "### Install the latest Ray release\n",
-    "This step is needed to interact with remote Ray clusters using Ray Job Submission {ref}`Ray Job Submission <kuberay-job>` and {ref}`Ray Client <kuberay-client>`."
+    "This step is needed to interact with remote Ray clusters using {ref}`Ray Job Submission <kuberay-job>` and {ref}`Ray Client <kuberay-client>`."
    ]
   },
   {
