--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -34,7 +34,7 @@
    "id": "656a0707",
    "metadata": {},
    "source": [
-    "See {ref}`installing Ray` for more details. "
+    "See {ref}`installation` for more details. "
    ]
   },
   {
