--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pip install -U \"ray[default]\""
+    "! pip install -U \"ray[default]\""
    ]
   },
   {
