Try bringing commands onto one line, maybe it will fix the lint error.
Signed-off-by: Dmitri Gekhtman <dmitri.m.gekhtman@gmail.com>

--- a/doc/source/cluster/kuberay/quickstart.ipynb
+++ b/doc/source/cluster/kuberay/quickstart.ipynb
@@ -247,9 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! kubectl get pods --selector=ray.io/cluster=raycluster-autoscaler\\\n",
-    " --selector=ray.io/node-type=head\\\n",
-    " -o custom-columns=POD:metadata.name --no-headers\n",
+    "! kubectl get pods --selector=ray.io/cluster=raycluster-autoscaler --selector=ray.io/node-type=head -o custom-columns=POD:metadata.name --no-headers\n",
     "    \n",
     "# raycluster-autoscaler-head-xxxxx"
    ]
@@ -273,9 +271,7 @@
    "source": [
     "# Substitute your output from the last cell in place of \"raycluster-autoscaler-head-xxxxx\"\n",
     "\n",
-    "! kubectl exec raycluster-autoscaler-head-xxxxx -it -c ray-head --\\\n",
-    " python -c\\\n",
-    " \"import ray; ray.init(); ray.autoscaler.sdk.request_resources(num_cpus=3)\""
+    "! kubectl exec raycluster-autoscaler-head-xxxxx -it -c ray-head -- python -c \"import ray; ray.init(); ray.autoscaler.sdk.request_resources(num_cpus=3)\""
    ]
   },
   {
@@ -431,8 +427,7 @@
    "source": [
     "# The following job's logs will show the Ray cluster's total resource capacity, including 3 CPUs.\n",
     "\n",
-    "! ray job submit --address http://localhost:8265 --\\\n",
-    " python -c \"import ray; ray.init(); print(ray.cluster_resources())\""
+    "! ray job submit --address http://localhost:8265 -- python -c \"import ray; ray.init(); print(ray.cluster_resources())\""
    ]
   },
   {
