--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -515,7 +515,6 @@
    "outputs": [],
    "source": [
     "from ray.data.preprocessors import BatchMapper\n",
-    "from ray.data.extensions import TensorArray\n",
     "\n",
     "from torchvision import transforms\n",
     "\n",
@@ -526,10 +525,10 @@
     "      [transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))]\n",
     "    )\n",
     "\n",
-    "    df.loc[:, \"image\"] = TensorArray([\n",
+    "    df.loc[:, \"image\"] = [\n",
     "        torchvision_transforms(np.asarray(image)).numpy()\n",
     "            for image in df[\"image\"]\n",
-    "    ])\n",
+    "    ]\n",
     "    return df\n",
     "\n",
     "mnist_normalize_preprocessor = BatchMapper(fn=preprocess_images)"
