--- a/doc/source/ray-air/examples/torch_incremental_learning.ipynb
+++ b/doc/source/ray-air/examples/torch_incremental_learning.ipynb
@@ -526,8 +526,7 @@
     "    )\n",
     "\n",
     "    df.loc[:, \"image\"] = [\n",
-    "        torchvision_transforms(np.asarray(image)).numpy()\n",
-    "            for image in df[\"image\"]\n",
+    "        torchvision_transforms(image).numpy() for image in df[\"image\"]\n",
     "    ]\n",
     "    return df\n",
     "\n",
