[air][data] move train_test_split to ray.data
Signed-off-by: Matthew Deng <matt@anyscale.com>

--- a/doc/source/ray-air/examples/sklearn_example.ipynb
+++ b/doc/source/ray-air/examples/sklearn_example.ipynb
@@ -55,7 +55,7 @@
     "from ray.train.sklearn import SklearnPredictor\n",
     "from ray.data.preprocessors import Chain, OrdinalEncoder, StandardScaler\n",
     "from ray.air.result import Result\n",
-    "from ray.air.util.datasets import train_test_split\n",
+    "from ray.data import train_test_split\n",
     "from ray.train.sklearn import SklearnTrainer\n",
     "from ray.air.config import ScalingConfig\n",
     "\n",
