--- a/doc/source/ray-air/examples/lightgbm_example.ipynb
+++ b/doc/source/ray-air/examples/lightgbm_example.ipynb
@@ -53,7 +53,7 @@
     "from ray.air.config import ScalingConfig\n",
     "from ray.data.dataset import Dataset\n",
     "from ray.air.result import Result\n",
-    "from ray.air.util.datasets import train_test_split\n",
+    "from ray.data import train_test_split\n",
     "from ray.data.preprocessors import StandardScaler"
    ]
   },
